--- a/VoiceMC/VoiceMC Towny/index.html
+++ b/VoiceMC/VoiceMC Towny/index.html
@@ -131,7 +131,6 @@ This includes: <br>
 /wild - Spawns you in the middel of nowhere<p>
 /spawn - Takes you back to spawn<p>
 /warp {Artifacks, Casino, Crates, Crypto, Jobs, Playershops, Shop} - Warps you to areas in spawn<p>
-/shop - Buy ans sell items<p>
 /bal - Shows how much money you have<p>
 /baltop - Shows who has the most money<p>
 /cryptodisplay - Buy and sell crypto<p>
@@ -140,7 +139,39 @@ This includes: <br>
 /recall [$5,000] - Takes you to where you died last after respawn<p>
 /quest - Shows current Quest. <p>
 /playershop - Buy Items that are not on the normal shop or make your own. <p>
-/jobs join {Alchemist, Architect, Bulldozer, Enchanter, Explorer, Farmer, Hunter, Inventor, LumberJack, Miner, Weaponsmith}
+/jobs join {Alchemist, Architect, Bulldozer, Enchanter, Explorer, Farmer, Hunter, Inventor, LumberJack, Miner, Weaponsmith}<p>
+/jobs leave {Alchemist, Architect, Bulldozer, Enchanter, Explorer, Farmer, Hunter, Inventor, LumberJack, Miner, Weaponsmith}<p>
+<br>
+<font size="+2"><strong>
+Nerd
+</font><p></strong>
+/nv - Night Vision (unlimited)<p>
+/feed - Feed yourself (5m cooldown)<p>
+/craft - Portable working bench<p>
+<font size="+2"><strong>
+Vip
+</font><p></strong>
+/hat<p>
+/heal (20m cooldown)<p>
+<font size="+2"><strong>
+Vip+
+</font><p></strong>
+/shop anywhere!<p>
+/nick - change youre name!<p>
+<fint size="+2"><strong>
+Overloard
+</font></strong><p>
+/ec - can use enderchest anywhere!<p>
+<font size="+2"><strong>
+GOD
+</font></strong><p>
+/fix - fix any item in your hand (2h cooldown)<p>
+<font size="+2"><strong>
+ULTRA
+</font></strong><p>
+/tfly - fly in your town<p>
+/back - goto previous position<p> 
+
 
 
 
