--- a/VoiceMC/VoiceMC Towny/index.html
+++ b/VoiceMC/VoiceMC Towny/index.html
@@ -158,7 +158,7 @@ Vip+
 </font><p></strong>
 /shop anywhere!<p>
 /nick - change youre name!<p>
-<fint size="+2"><strong>
+<font size="+2"><strong>
 Overloard
 </font></strong><p>
 /ec - can use enderchest anywhere!<p>
