--- a/VoiceMC/VoiceMC Towny/index.html
+++ b/VoiceMC/VoiceMC Towny/index.html
@@ -64,25 +64,28 @@ Updates</font></button>
 
     <p><IMG SRC="https://cdn.discordapp.com/emojis/573688181161984002.gif?v=1" alt="Emrald" style="width:30px;height:30px;"></IMG>
 
-    <font size="+3"><strong>*Towny Rules*</strong></font><br>
- -Respect staff & fellow users!<br>
- -We have a zero tolerance policy to racism, sexism and general discriminatory language.<br>
- -Repeat offences may result in a temporary mute or permanent ban.<br>
- -Any threats to an individual or the community will lead to a swift and permanent ban.<br>
- -We?re all for having a laugh but if things go to far we <strong>WILL</strong> intervene.<br>
- -No hacked clients, macros or other third-party applications<br>
- -No tools that gives any in-game advantage.<br>
--This includes x-ray resource packs.<br>
--Anything believed to be acquired through hacking will be deleted.<br>
--Don?t encourage others to break the rules.<br>
+    <font size="+3"><strong>Rules</strong></font><br>
+-Respect staff & fellow users!<br>
+-Harassing or insulting anybody is forbidden.<br>
+-We have a zero tolerance policy to racism, sexism and general discriminatory language.<br>
+-Trying to impersonate staff, youtubers, a.e. is forbidden.<br>
 -Attempting to avoid punishment will lead to a harsher punishment.<br>
--No asking for OP, ranks or items.<br>
--No laggy builds.<br>
+-Repeat offences may result in a temporary mute or permanent ban.<br>
+-Any threats to an individual or the community will lead to a swift and permanent ban.<br>
+-Were all for having a laugh but if things go to far we <strong>WILL</strong> intervene.<br>
+-Overloading areas with entities is forbidden (using/building laggy builds is forbidden).<br>
+-Trolling (in any way) is forbidden.<br>
+-Dont encourage others to break the rules.<br>
+-Attempting to avoid punishment will lead to a harsher punishment.<br>
+-Do not ask for OP, ranks or items.<br>
+-Spamming or self-promoting is forbidden.<br>
   </p>
 
 <p><IMG SRC="https://cdn.discordapp.com/emojis/573688181161984002.gif?v=1" alt="Emrald" style="width:30px;height:30px;"></IMG>
 
 <font size="+2"><strong>Towns</strong></font><br>
+-This also counts for using the pshop to withdraw too many items.<br>
+-Building around towns to stop them from playing normally is forbidden (except you are in the town).<br>
 -If a town is unable to pay for daily upkeep and falls, it's free reign.<br>
 -You may loot it, burn it down, blow it up, do as you please.<br>
 -As long as the town stands, leave it be.<br>
@@ -92,6 +95,17 @@ if a chest or build is <strong>OUTSIDE</strong> of a town is unlocked it may be 
 -their items left behind automatically belong to the town
 </p>
 
+
+ <p><IMG SRC="https://cdn.discordapp.com/emojis/573688181161984002.gif?v=1" alt="Emrald" style="width:30px;height:30px;"></IMG>
+  <font size="+2"><strong>Cheating & Hacking</strong></font><br>
+-The use of auto-clickers and/or macros is forbidden.<br>
+-No tools that gives any in-game advantage.<br>
+-This includes x-ray resource packs.<br>
+-Using any kind of 3rd-party-software is forbidden on all network servers.
+-Anything believed to be acquired through hacking will be deleted.<br>
+  
+  
+  
   <p><IMG SRC="https://cdn.discordapp.com/emojis/573688181161984002.gif?v=1" alt="Emrald" style="width:30px;height:30px;"></IMG>
   <font size="+2"><strong>No Griefing</strong></font><br>
 -This includes town members and non-town members.<br>
@@ -103,15 +117,17 @@ if a chest or build is <strong>OUTSIDE</strong> of a town is unlocked it may be 
 -Do not build around the perimeter of a town unless it is your own.
 </p>
 
+
 <p><IMG SRC="https://cdn.discordapp.com/emojis/573688181161984002.gif?v=1" alt="Emrald" style="width:30px;height:30px;"></IMG>
 <font size="+2"><strong>No Traps</strong></font><br>
 -Any trap in the towny server with the intention to<br>
 harm and/or kill another player violates this rule
 This includes: <br>
-- Any redstone device that, once activated, harms a player<br>
-- A town spawn that does not allow for safe entry/exit<br>
-- Large holes that are not properly secured<br>
-- TP traps.
+Using traps is forbidden. Counting as traps are:<br>
+    • Any redstone device that harms a player.<br>
+    • Any town spawn that does not allow safe entry and/or exit.<br>
+    • Large holes that are not properly secured.<br>
+    • TP Traps.<br>
 </p>
 
 
