--- a/VoiceMC/index.html
+++ b/VoiceMC/index.html
@@ -59,31 +59,37 @@ Twitch</font></button>
     </font>
 
 <iframe src="https://player.twitch.tv/?channel=novoicechanger" frameborder="0" allowfullscreen="true" scrolling="no" height="478" width="720"></iframe><a href="https://www.twitch.tv/novoicechanger?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
-<br>
-<br>
 
 </div>
-<center>
-<text> Highlanders Town </text> <br>
-<iframe src="highlanders.png"frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620">
-</iframe>
 
 <br>
 <br>
 
-  <text> bork shine </text><br>
-  <iframe src="YOU_CAN_SUCK_MY_COCK_BOAT.png"frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620" sandbox="allow-popups"  >
-  </iframe>
+</body>
+<p>
+<text>
+<strong><font size="+2">Network Rules</strong></font><br>
+1. Harassing or insulting anybody is forbidden.<br>
+1.1. Be respectful to any player.<br>
+1.2. We have a zero tolerance policy to racism; sexism, discriminatory language.<br>
+1.3 Repeat offences may result in a temporary mute or permanent ban.<br>
+1.4. We forbid any kind of racial slurs or political statments.<br>
+2. Using any kind of 3rd-party-software is forbidden on all network servers.<br>
+2.1. This also includes the use of x-ray packs.<br>
+2.2. The use of auto-clickers and/or macros is forbidden.<br>
+3. Spamming or self-promoting is forbidden.<br>
+4. Trying to impersonate staff, youtubers, a.e. is forbidden.<br>
+5. Any threats to an individual are forbidden and wil lresult in a permanent ban.<br>
+6. Admins have final say in the interpretation of any rules listed or not listed.<br>
+7. Don’t encourage others to break the rules.<br>
+8. Attempting to avoid punishment will lead to a harsher punishment.<br>
+9. Do not ask for OP, ranks or items.<br>
 
-    <iframe src="vh.png"frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620">
-    </iframe>
-    </div>
-    <br>
-    <br>
-<text> LittlePPSquad </text> <br>
-
-    <iframe src="Ruben_Sucks_2.png"frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620">
-    </iframe>
+</div>
+<div align="right">
+<font size="+3"><strong> JOIN THE DISCORD!</strong></font><br>
+    <iframe src="https://discordapp.com/widget?id=571721954143371274&theme=dark" width="450" height="600" allowtransparency="true" frameborder="0"></iframe>
+</div>
 
   </body>
 
