--- a/VoiceMC/VoiceMC Towny/index.html
+++ b/VoiceMC/VoiceMC Towny/index.html
@@ -29,6 +29,8 @@
 
   <body>
 
+
+
 <div align="center">
 
     <button onclick="location.href='../index.html'" class="btn draw-border" style="margin:5px"> <font color="#ff0000">
@@ -64,72 +66,39 @@ Updates</font></button>
 
     <p><IMG SRC="https://cdn.discordapp.com/emojis/573688181161984002.gif?v=1" alt="Emrald" style="width:30px;height:30px;"></IMG>
 
-    <font size="+3"><strong>Rules</strong></font><br>
--Respect staff & fellow users!<br>
--Harassing or insulting anybody is forbidden.<br>
--We have a zero tolerance policy to racism, sexism and general discriminatory language.<br>
--Trying to impersonate staff, youtubers, a.e. is forbidden.<br>
--Attempting to avoid punishment will lead to a harsher punishment.<br>
--Repeat offences may result in a temporary mute or permanent ban.<br>
--Any threats to an individual or the community will lead to a swift and permanent ban.<br>
--Were all for having a laugh but if things go to far we <strong>WILL</strong> intervene.<br>
--Overloading areas with entities is forbidden (using/building laggy builds is forbidden).<br>
--Trolling (in any way) is forbidden.<br>
--Dont encourage others to break the rules.<br>
--Attempting to avoid punishment will lead to a harsher punishment.<br>
--Do not ask for OP, ranks or items.<br>
--Spamming or self-promoting is forbidden.<br>
-  </p>
+<strong><font size="+2"> Towny Rules </font></strong>
 
-<p><IMG SRC="https://cdn.discordapp.com/emojis/573688181161984002.gif?v=1" alt="Emrald" style="width:30px;height:30px;"></IMG>
-
-<font size="+2"><strong>Towns</strong></font><br>
--This also counts for using the pshop to withdraw too many items.<br>
--Building around towns to stop them from playing normally is forbidden (except you are in the town).<br>
--If a town is unable to pay for daily upkeep and falls, it's free reign.<br>
--You may loot it, burn it down, blow it up, do as you please.<br>
--As long as the town stands, leave it be.<br>
--Similarly,
-if a chest or build is <strong>OUTSIDE</strong> of a town is unlocked it may be looted.<br>
--If a member of a town can no longer afford to be a part of it<br>
--their items left behind automatically belong to the town
+<IMG SRC="https://cdn.discordapp.com/emojis/573688181161984002.gif?v=1" alt="Emrald" style="width:30px;height:30px;"></IMG>
 </p>
-
-
- <p><IMG SRC="https://cdn.discordapp.com/emojis/573688181161984002.gif?v=1" alt="Emrald" style="width:30px;height:30px;"></IMG>
-  <font size="+2"><strong>Cheating & Hacking</strong></font><br>
--The use of auto-clickers and/or macros is forbidden.<br>
--No tools that gives any in-game advantage.<br>
--This includes x-ray resource packs.<br>
--Using any kind of 3rd-party-software is forbidden on all network servers.
--Anything believed to be acquired through hacking will be deleted.<br>
-  
-  
-  
-  <p><IMG SRC="https://cdn.discordapp.com/emojis/573688181161984002.gif?v=1" alt="Emrald" style="width:30px;height:30px;"></IMG>
-  <font size="+2"><strong>No Griefing</strong></font><br>
--This includes town members and non-town members.<br>
--You may not alter any building, plot, or town that does not -belong to you without consent.<br>
--The alterations include but are not limited to:<br>
--Placing or destroying blocks.<br>
--Placing or dropping any unwanted items in hoppers.<br>
--Claiming a plot without the consent of the mayor (Unless otherwise stated in the town rules)<br>
--Do not build around the perimeter of a town unless it is your own.
+<p>
+<font size="-2">Network rules apply</font><br>
+1. Overloading areas with entities is forbidden (using/building laggy builds is forbidden).<br>
+1.1. This also counts for using the pshop to withdraw too many items.<br>
+2. Griefing towns is forbidden (this also includes town members).<br>
+2.1. Building around towns to stop them from playing normally is forbidden (except you are in the town).<br>
+2.2. If a town can not pay for daily upkeep and it falls these rules do not apply anymore.<br>
+3. Trolling (in any way) is forbidden.<br>
+4. Using traps is forbidden. Counting as traps are:<br>
+      • Any redstone device that harms a player.<br>
+      • Any town spawn that does not allow safe entry and/or exit.<br>
+      • Large holes that are not properly secured.<br>
+      • TP Traps.<br>
+5. War (between towns) is normally disallowed.<br>
+5.1. War can be allowed by an Administrator (or higher) under the agreement of<br>
+      •both Town Mayors / Nation Kings.<br>
+6. Stream-Sniping / Meta-Gaming is forbidden.<br>
 </p>
-
-
-<p><IMG SRC="https://cdn.discordapp.com/emojis/573688181161984002.gif?v=1" alt="Emrald" style="width:30px;height:30px;"></IMG>
-<font size="+2"><strong>No Traps</strong></font><br>
--Any trap in the towny server with the intention to<br>
-harm and/or kill another player violates this rule
-This includes: <br>
-Using traps is forbidden. Counting as traps are:<br>
-    • Any redstone device that harms a player.<br>
-    • Any town spawn that does not allow safe entry and/or exit.<br>
-    • Large holes that are not properly secured.<br>
-    • TP Traps.<br>
-</p>
-
+<font size="-5">Admins have final say in the interpretation of any rules listed or not listed in this document.
+</font>
+<br>
+<font size="-5"><strong>Punishments:</strong> currently under the discretion of the moderator/admin.<br>
+Punishments may vary depending on many factors.<br>
+In all cases that is up to staff.<br>
+If somebody may break a rule that is not listed here but should/is forbidden staff can decide by themselves to punish it or not.<br>
+Breaking any rule can result in a permanent ban from our network - not depending on donating or how much you spent for the server.<br>
+Donating to the server does not protect from bans and else.<br>
+Rules may change depending on staffs decision - its every players own task to keep up on our rules.<br>
+</font>
 
 <p>
 <br>
@@ -155,8 +124,12 @@ Using traps is forbidden. Counting as traps are:<br>
 /recall [$5,000] - Takes you to where you died last after respawn<p>
 /quest - Shows current Quest. <p>
 /playershop - Buy Items that are not on the normal shop or make your own. <p>
-/jobs join {Alchemist, Architect, Bulldozer, Enchanter, Explorer, Farmer, Hunter, Inventor, LumberJack, Miner, Weaponsmith}<p>
-/jobs leave {Alchemist, Architect, Bulldozer, Enchanter, Explorer, Farmer, Hunter, Inventor, LumberJack, Miner, Weaponsmith}<p>
+/jobs join<br><font size="-2">
+ {Alchemist, Architect, Bulldozer, Enchanter, Explorer, Farmer, Hunter, Inventor, LumberJack, Miner, Weaponsmith}<p>
+ </font>
+/jobs leave<br><font size="-2">
+ {Alchemist, Architect, Bulldozer, Enchanter, Explorer, Farmer, Hunter, Inventor, LumberJack, Miner, Weaponsmith}<p>
+ </font>
 <br>
 <font size="+2"><strong>
 Nerd
@@ -195,7 +168,28 @@ ULTRA
 
 
 
+<center>
+<text> Highlanders Town </text> <br>
+<iframe src="highlanders.png"frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620">
+</iframe>
 
+<br>
+<br>
+
+  <text> bork shine </text><br>
+  <iframe src="YOU_CAN_SUCK_MY_COCK_BOAT.png"frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620" sandbox="allow-popups"  >
+  </iframe>
+
+    <iframe src="vh.png"frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620">
+    </iframe>
+    </div>
+    <br>
+    <br>
+<text> LittlePPSquad </text> <br>
+
+    <iframe src="Ruben_Sucks_2.png"frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620">
+    </iframe>
+    </center>
 
 
 
@@ -203,9 +197,5 @@ ULTRA
 
 
 <br>
-<font size="-5">Admins have final say in the interpretation of any rules listed or not listed in this document.
-</font>
-<br>
-<font size="-5"><strong>Punishments:</strong> currently under the discretion of the moderator/admin.
-</font>
+
   </html>
